# chitchat

./: .gitignore  Dockerfile  LICENSE  README.md  config-template.ini  config.ini.template  dolly.ipynb  index.json  output.json  pyproject.toml  requirements.txt
.streamlit/: config.toml
chitchat/: embeddings.py  main.py  prompts.py  score.py  utils.py
chitchat-cli/: ex-answer.txt  ex-ifc-full-q.txt  main.py  prompts-backup.py  prompts.py  query.txt  questions-lite.csv  questions.csv  score.py  utils.py
chitchat-cli/data/: questions-20230403.csv  questions-lite.csv
chitchat/components/: sidebar.py
chitchat/data/: questions-lite.csv  questions.csv
example/: answer-equity.json  answer-kcb.json  answer-long-int.json  answer-short-int.json  answer-test.json  score-equity.csv  score-kcb.csv  score-long-int.csv  score-short-int.csv  score-test.csv
