[tool.poetry]
name = "chichat"
version = "0.0.1"
description = "A Streamlit app utilizing gpt-turbo-3.5 and llama-index for long-form qa"
authors = ["Rui Qiu"]
license = "MIT"
readme = "README.md"
# packages = [{include = "chitchat"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
langchain = "^0.0.102"
cohere = "^3.2.1"
faiss-cpu = "^1.7.3"
openai = "^0.27.0"
docx2txt = "^0.8"
pillow = "^9.4.0"
pypdf = "^3.3.0"
tenacity = "8.1.0"
llama-index = "^0.4.21"
tiktoken = "^0.3.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"
pytest = "^7.2.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"