[tool.poetry]
name = "chichat"
version = "0.2.1"
description = "A tool utilizing gpt-turbo-3.5 and llama-index for contextual question answering."
authors = ["Rui Qiu"]
license = "MIT"
readme = "README.md"
# packages = [{include = "chitchat"}]

[tool.poetry.dependencies]
python = "^3.9.12"
langchain = "^0.0.132"
faiss-cpu = "^1.7.3"
openai = "^0.27.0"
docx2txt = "^0.8"
pypdf = "^3.3.0"
tenacity = "8.1.0"
streamlit = "^1.21.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"
pytest = "^7.2.1"
ipykernel = "^6.22.0"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
